More on Entities
Goodwitch kind of working.
Twister looks good, but I'd like it to spin.
Munchkin works great, throws rocks.
Vampire needs to move. won't budge. Takes fire damage from sun though.
Scarecrow needs work.

--- a/Resources/assets/secondcircle/lang/en_US.lang
+++ b/Resources/assets/secondcircle/lang/en_US.lang
@@ -11,6 +11,7 @@ item.secondcircle:igniter.name=Second Circle Portal Igniter
 item.secondcircle:scicon.name=Second Circle Icon
 item.secondcircle:rawbat.name=Raw Bat Meat
 item.secondcircle:cookedbat.name=Cooked Bat Meat
+item.secondcircle:rock.name=Rock
 
 # Blocks
 tile.secondcircle:portal.name=Second Circle Portal
